Fix responsive spacings and heading font sizes (#182)

--- a/src/theme/_layout.scss
+++ b/src/theme/_layout.scss
@@ -155,6 +155,7 @@ footer {
   & > h1.documentFirstHeading,
   & > .block.image.align.left,
   & > .block.image.align.right,
+  & > .block.image.align.center,
   & > .block.image.align.wide figure,
   & > .block.video.align.left,
   & > .block.video.align.right,
