--- a/src/theme/blocks/_grid.scss
+++ b/src/theme/blocks/_grid.scss
@@ -1,4 +1,5 @@
-.block.gridBlock {
+.block.gridBlock,
+#page-edit .block-editor-gridBlock .block.gridBlock {
   margin-top: 0;
   margin-bottom: 0;
 
@@ -38,7 +39,7 @@
       height: 100%;
 
       .image-wrapper {
-        margin: 0 0 40px 0 !important;
+        margin-bottom: 40px;
 
         img {
           position: relative;
@@ -50,7 +51,6 @@
         @include body-text();
 
         .headline {
-          padding: 0 !important;
           margin-bottom: 20px;
           letter-spacing: 1px;
           text-transform: uppercase;
@@ -72,10 +72,15 @@
 
   .block-editor-teaser {
     padding: 0;
-    margin: 10px !important;
-    .teaser-item.default {
-      padding-bottom: 0;
-      border: none;
+    margin: 10px;
+
+    .ui.block.inner.teaser {
+      .block.teaser > .block.teaser > .teaser-item.default {
+        padding-bottom: 0;
+        border: none;
+        margin-right: auto;
+        margin-left: auto;
+      }
     }
   }
 
