--- a/src/theme/blocks/_listing.scss
+++ b/src/theme/blocks/_listing.scss
@@ -62,6 +62,10 @@
         margin-bottom: 40px !important;
         color: $black;
         @include text-heading-h2();
+        @container (max-width: #{$largest-mobile-screen}) {
+          @include text-heading-h3();
+          margin-bottom: 20px;
+        }
       }
     }
   }
@@ -195,6 +199,10 @@
 #page-edit .block-editor-listing {
   .block.listing {
     margin-top: 0;
+    .items {
+      margin-right: auto;
+      margin-left: auto;
+    }
 
     h2 {
       @include default-container-width();
