--- a/src/theme/blocks/_teaser.scss
+++ b/src/theme/blocks/_teaser.scss
@@ -98,6 +98,10 @@
       margin-top: 0;
       margin-bottom: 40px;
       @include text-heading-h2();
+      @container (max-width: #{$largest-mobile-screen}) {
+        @include text-heading-h3();
+        margin-bottom: 20px;
+      }
     }
     p {
       margin: 0;
